# Mini-WebApp-Shop

./: .env  .pre-commit-config.yaml  Makefile  docker-compose.yaml  mypy.ini  pyproject.toml
app/: Dockerfile  config.py  main.py
app/core/: dal.py
app/models/alembic/: env.py
app/models/alembic/versions/: f974bdd7c45f_create_tables.py
app/models/src/: database.py  models.py  repository.py
app/models/src/modules/: goods.py  orders.py  orders_goods.py  users.py
app/routers/goods/: schemas.py
app/routers/order_goods/: schemas.py
app/routers/orders/: schemas.py
app/routers/users/: schemas.py
backend/: Dockerfile  main.py  start.sh
backend/core/: schemas.py
backend/models/src/: repository.py
backend/models/src/modules/: orders.py  orders_goods.py
backend/routers/goods/: schemas.py
backend/routers/order_goods/: dal.py  repository.py  schemas.py
backend/routers/orders/: dal.py  repository.py  router.py  schemas.py
backend/routers/users/: repository.py  schemas.py
bot/: config.py
frontend/: .eslintrc.js  Dockerfile  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vue.config.js
frontend/src/: App.vue  main.ts
frontend/src/modules/admin/api/: index.ts  orders.ts
frontend/src/modules/admin/components/: goodsDataTable.vue  goodsFormChange.vue  ordersDataTable.vue  ordersFormChange.vue  usersDataTable.vue
frontend/src/modules/admin/pages/: adminPanel.vue  (+1 more)
frontend/src/router/: index.ts
frontend/src/store/: index.ts
frontend/src/stores/: index.ts
lisseshop/: index.html  styles.css
(+10 files in other folders)
