[project]
name = "example-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.4",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "sqlalchemy[mypy]>=2.0.40",
]
bot = [
    "aiogram>=3.19.0",
    "aiogram-dialog>=2.3.1",
]
backend = [
    "fastapi[standard]>=0.115.12",
    "sqlalchemy>=2.0.40",
]